# My-diary

./: .gitignore  .gitmessage.txt  README.md  pyproject.toml
.github/ workflows/: checks.yml 
.github/ISSUE_TEMPLATE/: feature_request.md
app/: database.py  main.py
app/core/: config.py
app/models/: user.py
